# docs/swagger.json
@@ -321,6 +321,68 @@
                 }
             }
         },
+        "/space/{id}": {
+            "get": {
+                "description": "获取空间详情",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "空间"
+                ],
+                "summary": "获取空间详情",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "空间ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "获取成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/github_com_chenyl99x_toge-api_internal_model.Space"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "空间不存在",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/timezone/available": {
             "get": {
                 "description": "获取系统支持的所有时区列表",
