# internal/handler/space_handler.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"strconv"
+
 	"github.com/chenyl99x/toge-api/internal/domain"
 	"github.com/chenyl99x/toge-api/internal/model"
 	"github.com/chenyl99x/toge-api/pkg/response"
@@ -47,4 +49,31 @@ func (h *SpaceHandler) Create(c *gin.Context) {
 	}
 
 	response.Created(c, space)
+}
+
+// GetByID GetSpaceByID godoc
+// @Summary 获取空间详情
+// @Description 获取空间详情
+// @Tags 空间
+// @Accept json
+// @Produce json
+// @Param id path uint true "空间ID"
+// @Success 200 {object} response.Response{data=model.Space} "获取成功"
+// @Failure 400 {object} response.Response "参数错误"
+// @Failure 404 {object} response.Response "空间不存在"
+// @Failure 500 {object} response.Response "服务器错误"
+// @Router /space/{id} [get]
+func (h *SpaceHandler) GetByID(c *gin.Context) {
+	ctx := c.Request.Context()
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
+	if err != nil {
+		response.BadRequest(c, err.Error())
+		return
+	}
+	space, err := h.spaceService.GetByID(ctx, uint(id))
+	if err != nil {
+		response.NotFound(c, err.Error())
+		return
+	}
+	response.Success(c, space)
 }
